# mcp-overseerr

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  tag-on-main.yml  tests.yml
src/overseerr_mcp/: __init__.py  client.py  models.py  overseerr.py  server.py  tools.py
tests/: test_ci_workflow.py  test_ci_workflows.py  test_client.py  test_docs.py  test_models.py  test_server.py  test_tools.py  test_tools_serialization.py  test_tools_utils.py
